@@ -1,3 +1,8 @@
+Mon Jun 28 10:57:12 1999  Owen Taylor  <otaylor@redhat.com>
+
+	* gtk/gtkctree.c (draw_cell_pixmap): Reset clip mask
+	for fg_gc if we set it for drawing pixmap.
+
 Thu Jun 24 17:06:23 1999  Tim Janik  <timj@gtk.org>
 
 	* gdk/gdkevents.c (gdk_event_translate): removed old ""Got event for
